--- a/web/assets/css/style.css
+++ b/web/assets/css/style.css
@@ -7,10 +7,19 @@
 :root {
   --bg-color: #0C3C60;
   --blue-light: #70A1C9;
+  --white: #E4E9ED;
+  --bd-3x: 3px;
 }
 
 body {
   background: var(--bg-color);
+}
+
+input,
+textarea,
+button {
+  outline: none;
+  border: none;
 }
 
 a {
@@ -25,7 +34,11 @@ ul {
 
 nav {
   padding: 1rem;
-  text-transform: uppercase;
+  text-transform: capitalize;
+}
+
+.navs a:not(:last-child) {
+  margin-right: 15px;
 }
 
 .container {
@@ -38,10 +51,26 @@ nav {
   display: flex;
 }
 
-.jc {
+.jb {
   justify-content: space-between;
+}
+
+.jc {
+  justify-content: center;
 }
 
 .mt-3 {
   margin-top: 3rem;
 }
+
+
+
+
+
+/* Footer */
+
+footer {
+  padding: 2rem;
+  color: var(--white);
+}
+
