--- a/web/assets/css/home.css
+++ b/web/assets/css/home.css
@@ -1,4 +1,4 @@
-@import url('style.css');
+/* @import url('style.css'); */
 
 
 /* Área de Busca */
@@ -43,49 +43,8 @@
   border: 1px solid var(--white);
 }
 
-/* .annouc div {
-  width: 100%;
+@media screen and (max-width: 375px) {
+  .flex {
+    flex-wrap: wrap;
+  }
 }
-
-.form-control-email input,
-.form-control-email button {
-  display: block;
-} */
-
-/* Area para Anunciar
-
-.title {
-  padding: 3rem;
-  color: var(--white);
-  text-align: center;
-}
-
-.form-control-email > input,
-.form-control-email > textarea  {
-  width: 100%;
-  padding: 0.50rem;
-  border-radius: var(--bd-3x);
-}
-
-.form-control-email button {
-  border-radius: var(--bd-3x);
-  padding:10px 17px;
-  transition: 0.2s;
-}
-
-.form-control-email button:hover {
-  cursor: pointer;
-  border: solid 1px var(--white);
-  background-color: var(--bg-color);
-  color: var(--white);
-}
-
-.form-control-email input:not(:first-child),
-.form-control-email textarea,
-.form-control-email button {
-  margin-top: 0.50rem;
-}
-
-.form-control-email textarea {
-  height: 6rem;
-} */
