--- a/web/assets/css/style.css
+++ b/web/assets/css/style.css
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap');
 @import url('components/contact-form.css');
+/* @import url('contato.css');
+@import url('quem-somos.css');
+@import url('destaques.css'); */
 
 * {
   margin: 0;
@@ -93,4 +96,15 @@ footer {
 .social-links a i:hover {
   cursor: pointer;
   color: var(--blue-light);
+}
+
+@media screen and (max-width: 375px) {
+
+  .container { 
+    width: 355px;
+  }
+  
+  .flex {
+    flex-wrap: wrap;
+  }
 }
